<resources>
    <string name="textview_version">"Aktualna wersja:  0.5"</string>
    <string name="app_name">1LO Gliwice</string>
    <string name="header_name">I Liceum Ogólnokształcące Dwujęzyczne im. E. Dembowskiego</string>

    <string name="menu_settings">Ustawienia</string>
    <string name="menu_mainPage">Strona główna</string>
    <string name="menu_clasroomChange">Zamiana klas</string>
    <string name="menu_information">Informacje</string>

    <string name="drawerOpen">drawerOpen</string>
    <string name="drawerClose">drawerClose</string>

    <string name="settings_notifications">Powiadomienia</string>
    <string name="settings_schoolClass">Wybierz klasę</string>
    <string name="settings_timeOFnotifiations">Ustaw czas powiadomień</string>
    <string name="yourClass_empty" />
    <string name="title_activity_settings">Settings</string>
    <string name="button_refresh">Ośwież zastępstwa</string>

    <string name="button_yourClass">Moja klasa</string>
    <string name="textview_result" />
    <string name="textview_date" />
    <string name="textview_chosenClass" />


    <string name="banner_ad_unit_id">ca-app-pub-6373386798183476/8160917974</string>
    <string name="fullScrean_ad_unit_id">ca-app-pub-6373386798183476/6131731335</string>
    <string name="banner_ad_unit_id_test">ca-app-pub-3940256099942544/6300978111</string>
    <string name="classSwap">Zamiana klas</string>
    <string name="button_classSwap">Pokaż zamianę klas</string>

    <string name="textview_creator">Stworzone przez Jakuba Olszewskiego</string>
    <string name="textview_github" />
    <string name="textview_watchAd" />
    <string name="button_send">Wyślij</string>
    <string name="button_details">Zobacz wysłaną wiadomość</string>
    <string name="todo">TODO</string>
    <string name="imie">Imię</string>
    <string name="wiadomosc">Wiadomość</string>
    <string name="email">Email</string>

    <string name="powr_t">Powrót</string>
    <string name="menu_about_school">O szkole</string>
    <string name="menu_news">Aktualności</string>
    <string name="button_achievements">Osiągnięcia</string>
    <string name="button_for_candidates">Dla kandydatów</string>
    <string name="button_organization_of_the_school_year">Organizacja roku szkolnego</string>
    <string name="menu_plan">Plan lekcji</string>


</resources>
