<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/menu_mainPage"
        android:title="@string/menu_mainPage"
        android:icon="@drawable/ic_home"

        />
    <item
        android:id="@+id/menu_classSwap"
        android:title="@string/menu_clasroomChange"
        android:icon="@drawable/ic_redo"/>
    <item
        android:id="@+id/menu_news"
        android:title="@string/menu_news"
        android:icon="@drawable/ic_news"
        />

    <item
        android:id="@+id/menu_about_school"
        android:title="@string/menu_about_school"
        android:icon="@drawable/ic_school"
        />

    <item
        android:id="@+id/menu_archive"
        android:title="Archiwum zastępstw"
        android:icon="@drawable/ic_archive_black_24dp"
        />

    <item
        android:id="@+id/menu_setting"
        android:title="@string/menu_settings"
        android:icon="@drawable/ic_settings"/>
    <item
        android:id="@+id/menu_information"
        android:title="@string/menu_information"
        android:icon="@drawable/ic_information"/>

</menu>