<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".classSwapActivity"
    android:id="@+id/drawer"
    android:orientation="vertical">
    <RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
        android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="@android:dimen/app_icon_size"
            android:layout_marginLeft="0dp"
            android:layout_marginStart="0dp">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginStart="250dp"
                android:layout_marginLeft="250dp"
                android:layout_marginTop="-1dp"
                android:contentDescription="@string/todo"
                android:scaleType="fitCenter"
                android:src="@drawable/logo_zso10_toolbar"
                app:layout_constraintBottom_toTopOf="@+id/textView"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.0" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginStart="128dp"
                android:layout_marginLeft="128dp"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:gravity="end"
                android:text="@string/header_name"
                android:textColor="@color/textColor"
                android:textIsSelectable="false"
                android:textSize="12sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.49"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageView"
                app:layout_constraintVertical_bias="1.0" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.appcompat.widget.Toolbar>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="56dp">

            <Button
                android:id="@+id/button_classSwap"
                android:layout_width="0dp"
                android:layout_height="41dp"
                android:layout_marginStart="105dp"
                android:layout_marginLeft="105dp"
                android:layout_marginEnd="105dp"
                android:layout_marginRight="105dp"
                android:background="@color/colorPrimary"
                android:text="@string/button_classSwap"
                android:textAllCaps="false"
                android:textColor="@color/textColor"
                android:textSize="13sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView_result" />

            <TextView
                android:id="@+id/textView_classSwap"
                android:layout_width="237dp"
                android:layout_height="24dp"
                android:layout_marginStart="64dp"
                android:layout_marginLeft="64dp"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="64dp"
                android:layout_marginRight="64dp"
                android:gravity="center_horizontal"
                android:text="@string/classSwap"
                android:textAlignment="center"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView_result"
                android:layout_width="323dp"
                android:layout_height="319dp"
                android:layout_marginStart="25dp"
                android:layout_marginLeft="25dp"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="25dp"
                android:layout_marginRight="25dp"
                android:text="@string/textview_result"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView_classSwap" />

            <com.google.android.gms.ads.AdView
                android:id="@+id/adView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginLeft="32dp"
                android:layout_marginEnd="32dp"
                android:layout_marginRight="32dp"
                android:layout_marginBottom="32dp"
                ads:adSize="BANNER"
                ads:adUnitId="@string/banner_ad_unit_id"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.494"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/button_classSwap"
                app:layout_constraintVertical_bias="0.504"
                tools:ignore="MissingConstraints" />

        </androidx.constraintlayout.widget.ConstraintLayout>


    </RelativeLayout>

    <com.google.android.material.navigation.NavigationView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/navigationView"
    app:menu="@menu/menu_item"
    app:headerLayout="@layout/header"
    android:background="@color/colorPrimaryDark"
    app:itemTextColor="@color/textColor"
    android:layout_gravity = "start"
    app:itemIconTint="@color/textColor"
    android:layout_marginLeft="19dp"
        android:layout_marginStart="19dp" />
</androidx.drawerlayout.widget.DrawerLayout>