<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundColor"
    tools:context="com.example.lo1gliwice.aboutSchoolActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="@android:dimen/app_icon_size"
                android:layout_marginStart="0dp"
                android:layout_marginLeft="0dp">

                <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_marginStart="250dp"
                    android:layout_marginLeft="250dp"
                    android:layout_marginTop="-1dp"
                    android:contentDescription="@string/todo"
                    android:scaleType="fitCenter"
                    android:src="@drawable/logo_zso10_toolbar"
                    app:layout_constraintBottom_toTopOf="@+id/textView"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.0" />

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_marginStart="128dp"
                    android:layout_marginLeft="128dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginRight="16dp"
                    android:gravity="end"
                    android:text="@string/header_name"
                    android:textColor="@color/textColor"
                    android:textIsSelectable="false"
                    android:textSize="12sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.49"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/imageView"
                    app:layout_constraintVertical_bias="1.0" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.appcompat.widget.Toolbar>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="0dp"
            android:layout_marginLeft="0dp"
            android:layout_marginTop="56dp">


            <Button
                android:id="@+id/button_achievements"
                android:layout_width="0dp"
                android:layout_height="41dp"
                android:layout_marginStart="100dp"
                android:layout_marginLeft="100dp"
                android:layout_marginTop="128dp"
                android:layout_marginEnd="100dp"
                android:layout_marginRight="100dp"
                android:background="@color/colorPrimary"
                android:text="@string/button_achievements"
                android:textAllCaps="false"
                android:textColor="@color/textColor"
                android:textSize="13sp"
                ads:layout_constraintEnd_toEndOf="parent"
                ads:layout_constraintHorizontal_bias="1.0"
                ads:layout_constraintStart_toStartOf="parent"
                ads:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/button_for_candidates"
                android:layout_width="0dp"
                android:layout_height="41dp"
                android:layout_marginStart="100dp"
                android:layout_marginLeft="100dp"
                android:layout_marginTop="72dp"
                android:layout_marginEnd="100dp"
                android:layout_marginRight="100dp"
                android:background="@color/colorPrimary"
                android:text="@string/button_for_candidates"
                android:textAllCaps="false"
                android:textColor="@color/textColor"
                android:textSize="13sp"
                ads:layout_constraintBottom_toTopOf="@+id/button_organization_of_the_school_year"
                ads:layout_constraintEnd_toEndOf="parent"
                ads:layout_constraintStart_toStartOf="parent"
                ads:layout_constraintTop_toBottomOf="@+id/button_achievements" />

            <Button
                android:id="@+id/button_organization_of_the_school_year"
                android:layout_width="0dp"
                android:layout_height="41dp"
                android:layout_marginStart="100dp"
                android:layout_marginLeft="100dp"
                android:layout_marginTop="72dp"
                android:layout_marginEnd="100dp"
                android:layout_marginRight="100dp"
                android:layout_marginBottom="72dp"
                android:background="@color/colorPrimary"
                android:text="@string/button_organization_of_the_school_year"
                android:textAllCaps="false"
                android:textColor="@color/textColor"
                android:textSize="13sp"
                ads:layout_constraintBottom_toTopOf="@+id/adView"
                ads:layout_constraintEnd_toEndOf="parent"
                ads:layout_constraintStart_toStartOf="parent"
                ads:layout_constraintTop_toBottomOf="@+id/button_for_candidates" />

            <com.google.android.gms.ads.AdView
                android:id="@+id/adView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginLeft="32dp"
                android:layout_marginEnd="32dp"
                android:layout_marginRight="32dp"
                android:layout_marginBottom="32dp"
                ads:adSize="BANNER"
                ads:adUnitId="@string/banner_ad_unit_id"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.494"
                app:layout_constraintStart_toStartOf="parent"
                tools:ignore="MissingConstraints" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </RelativeLayout>

    <com.google.android.material.navigation.NavigationView
        android:id="@+id/navigationView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:layout_marginStart="19dp"
        android:layout_marginLeft="19dp"
        android:background="@color/colorPrimaryDark"
        app:headerLayout="@layout/header"
        app:itemIconTint="@color/textColor"
        app:itemTextColor="@color/textColor"
        app:menu="@menu/menu_item" />

</androidx.drawerlayout.widget.DrawerLayout>
